enable CONFIG_SOUND_CONTROL
Signed-off-by: Risti699 <wahhap10@gmail.com>

--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -2880,6 +2880,7 @@ CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_VGASTATE is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
