--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -142,6 +142,7 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 CONFIG_CRYPTO_ZSTD=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
