arm64: configs: Enable CONFIG_MSM_THERMAL_SIMPLE
Signed-off-by: Risti699 <wahhap10@gmail.com>

--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -21,6 +21,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_GENERIC_BUG=y
 CONFIG_THERMAL_SWITCH=y
+CONFIG_MSM_THERMAL_SIMPLE=y
 CONFIG_GENERIC_BUG_RELATIVE_POINTERS=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CSUM=y
