--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -5053,3 +5053,8 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_SBITMAP=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+### Project KARA Mod ###
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_DEFAULT_ZEN is not set
+
